ADM-442 update test code and update Calculate logic